[package]
name = "mc2"
version = "0.3.0-rc1"
edition = "2024"
license-file = "LICENSE"
description = "Provides user configured development environments using docker. Rust replacement for https://github.com/ooxi/mini-cross"
repository = "https://github.com/nicolube/mc2"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
serde_yaml = "0.9.34"
derive_more = { version = "2.1.1", features = ["error", "display", "from"] }
users = "0.11.0"
sha2="0.10.9"
hex="0.4.3"
